2007-11-25  Andy Wingo  <wingo@pobox.com>

	* doc/glib/defuns-main.xml.texi: 
	* doc/glib/defuns-iochannels.xml.texi: 
	* doc/glib/defuns-bookmarkfile.xml.texi: Regenerated, adds entries
	for the opaque types.

	* gnome/gw/support/gtk-doc.scm (superclasses)
	(gobject-class-stexi-docs): Document superclasses.
	(check-documentation-coverage): Print out "spurious" symbols,
	those that we think are documented but are not in the wrapper.

	* gnome/gw/support/gobject.scm (initializations-cg)
	(wrap-opaque-pointer!): Do define and export the wct variable, as
	other wrapsets that use this type need to get at the wct. Doh.

	* doc/gobject/guile-gnome-gobject.texi (Top): 
	* doc/glib/guile-gnome-glib.texi (Top): Remove the concept index,
	and add a type index.

	* gnome/gw/support/gtk-doc.scm (gobject-class-stexi-docs): Don't
	error if the class is not defined in the module.

	* gnome/gw/support/gobject.scm (wrap-freeable-pointer!)
	(wrap-refcounted-pointer!): Accept the ctype as the name of the
	type without a star, so that the type name becomes e.g.
	<g-main-loop> instead of <g-main-loop*>. This means that only
	truly opaque pointers will have a * in their names.

	* gnome/gw/gobject-spec.scm (initialize): Specialize on
	<g-source>, not <g-source*> -- fallout from the changes to
	gobject.scm.

	* gnome/gw/glib-spec.scm (initialize): Adapt to changes in
	wrap-freeable-pointer and wrap-refcounted-pointer.

	* doc/glib/defuns-*.xml.texi: Regenerated.

2007-11-24  Andy Wingo  <wingo@pobox.com>

	* gnome/gw/support/gobject.scm (unwrap-value-cg): Fix a typo, my
	bads yo.
	(<gobject-structure-type>, check-typespec-options, c-type-name)
	(make-typespec, unwrap-value-cg, call-arg-cg, wrap-value-cg)
	(wrap-structure!): New public function, wrap-structure!, which
	wraps a C structure as a Scheme value. Parameters of the form
	"StructName*" are interpreted as "out" parameters, while
	"const-StructName*" are treated as "in" parameters.

2007-11-23  Andy Wingo  <wingo@pobox.com>
